# MemoryGate

./: .env.example  .gitignore  CODE_REVIEW_1.md  CORE_CONTRACT.md  Dockerfile  LATE_BINDING_FIX.md  README.md  SCHEMA.md  auth_middleware.py  bootstrap.py  docker-compose.yml  entrypoint.sh  fly.toml  mcp_auth_gate.py  models.py  oauth_discovery.py  oauth_models.py  oauth_routes.py  pyproject.toml  rate_limiter.py  requirements.txt  retention.py  security_middleware.py  server.py  test_mcp.py  test_mcp_v2.py  test_retention_py.py  test_retention_v2.sql
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_cold_storage.py  0003_archived_memories.py  0004_audit_events.py  0005_add_tenant_id.py  0006_add_chains_relationships.py  (+1 more)
app/: deps.py  main.py  middleware.py
core/: audit.py  audit_constants.py  config.py  context.py  db.py  errors.py  import_harness.py  models.py  validators.py
docs/: ARCHIVE_RETENTION.md  AUDIT_LOGGING.md  AUTHENTICATION.md  CONFIGURATION.md  DATA_MODEL.md  DEPLOYMENT.md  GETTING_STARTED.md  INDEX.md  LOOM_INTEGRATION_SPEC.md  MCP_TOOLS.md  OPERATIONS.md  OVERVIEW.md  PRODUCTION_ENV.md  SCALING_NOTES.md
tests/: conftest.py  test_archive_restore_semantics.py  test_audit_no_content.py  test_auth_middleware.py  test_concept_aliases.py  test_concurrency_smoke.py  test_core_imports.py  test_import_harness.py  test_memory_archive_rehydrate.py  test_memory_validation.py  test_oauth_routes.py  test_rate_limiter.py  test_retention.py  test_security_middleware.py  test_service_tools_smoke.py  test_tool_routing.py
(+30 files in other folders)
